Adding Graphics definitions

--- a/src/data/levels/02_Assembly/01_Example program/chat/en.yml
+++ b/src/data/levels/02_Assembly/01_Example program/chat/en.yml
@@ -120,7 +120,7 @@ lda:
   - if you were watching carefully, you'll have noticed that [A] changed from $00 to $01
   - and [PC] changed from $4020 to $4022 🤯
   - those are CPU registers, quickly accessible locations
-  - each register can hold a single byte (8 bits) of data
+  - each register can hold a single byte (~8~ bits) of data
   - with the exception of [PC] ("Program Counter") which is 2 bytes wide
   responses:
   - what's the purpose of each register? [registers]
