--- a/src/data/levels/05b_PPU/17_Sprites 5-6 - Priorities/chat/en.yml
+++ b/src/data/levels/05b_PPU/17_Sprites 5-6 - Priorities/chat/en.yml
@@ -11,7 +11,7 @@ example:
     {{Top}}.load("SuperTiltBro.neees", "rom", "bin");
   messages:
   - take a look at the <cloud> in the middle
-  - the cloud is a <sprite> and the game title is part of the <background>
+  - the cloud is a sprite and the game title is part of the background
   - at some point, it covers the "TILT" and "BRO" words, while it should be behind them
   - this is because we are not using the correct sprite priorities
   - and BrokenNEEES got it wrong too, so it doesn't matter which PPU you use!
