--- a/src/data/levels/05b_PPU/17_Sprites 5-6 - Priorities/chat/es.yml
+++ b/src/data/levels/05b_PPU/17_Sprites 5-6 - Priorities/chat/es.yml
@@ -11,7 +11,7 @@ example:
     {{Top}}.load("SuperTiltBro.neees", "rom", "bin");
   messages:
   - presta atención a la <nube> en el medio
-  - la nube es un <sprite> y el título del juego es parte del <fondo>
+  - la nube es un sprite y el título del juego es parte del fondo
   - llegado a un punto, cubre las palabras "TILT" y "BRO", cuando debería estar detrás de ellas
   - esto es porque no estamos usando las prioridades correctas de los sprites
   - y BrokenNEEES también lo hizo mal, ¡así que no importa qué PPU uses!
