--- a/src/data/levels/05b_PPU/04_PPU Memory/chat/en.yml
+++ b/src/data/levels/05b_PPU/04_PPU Memory/chat/en.yml
@@ -11,9 +11,9 @@ howso:
   messages: 
   - the PPU has its own separate 16 KiB address space, specifically designed to fetch the 🕊️  tiles, 🏞️  backgrounds, and 🎨  palettes
   - check out 📄  ~/docs/ppu/ppu_memory.en.md~
-  - most of the time, it will use these addresses
+  - most of the time, it will use PPU addresses
   - and it will only use the CPU addresses as a bridge to communicate with the CPU
-  - from now on, we'll say something like "PPU address $1F2A" or "CPU address $1F2A" to differentiate the two spaces
+  - from now on, we'll say something like `PPU address $1F2A` or `CPU address $1F2A` to differentiate the two spaces
   responses:
   - how can we emulate this? 😮 [emulate]
 
