--- a/src/data/levels/02_Assembly/01_Example program/chat/es.yml
+++ b/src/data/levels/02_Assembly/01_Example program/chat/es.yml
@@ -188,8 +188,8 @@ finish:
 clicking:
   messages:
   - mmm...
-  - puedes navegar a la sección de código con `Alt+Up`
-  - luego, presionar `Alt+Enter`
-  - y volver con `Alt+Left`
+  - puedes navegar a la sección de código con ~Alt+Up~
+  - luego, presionar ~Alt+Enter~
+  - y volver con ~Alt+Left~
   responses:
   - ...finish
