--- a/src/data/levels/02_Assembly/02_Now it's your turn/chat/en.yml
+++ b/src/data/levels/02_Assembly/02_Now it's your turn/chat/en.yml
@@ -13,7 +13,7 @@ main:
 othercommands:
   messages:
   - sure
-  - press `Ctrl+C`
+  - press ~Ctrl+C~
   - type `test`, then Enter
   responses:
   - gotcha [main]
