--- a/src/data/levels/02_Assembly/02_Now it's your turn/chat/es.yml
+++ b/src/data/levels/02_Assembly/02_Now it's your turn/chat/es.yml
@@ -13,7 +13,7 @@ main:
 othercommands:
   messages:
   - seguro
-  - presiona `Ctrl+C`
+  - presiona ~Ctrl+C~
   - escribe `test`, luego Enter
   responses:
   - entendido [main]
