--- a/src/data/levels/01_Getting started/01_Introduction/chat/en.yml
+++ b/src/data/levels/01_Getting started/01_Introduction/chat/en.yml
@@ -51,7 +51,7 @@ idontknow:
   - you know how to program, right?
   - right? 🤔
   responses:
-  - I can write some <JavaScript> [javascript]
+  - I can write some JavaScript [javascript]
   - hmm... [hmm]
 
 hmm:
