--- a/src/data/levels/01_Getting started/01_Introduction/chat/es.yml
+++ b/src/data/levels/01_Getting started/01_Introduction/chat/es.yml
@@ -55,7 +55,7 @@ idontknow:
   - sabes cómo programar, ¿no?
   - ¿no? 🤔
   responses:
-  - puedo escribir algo de <JavaScript> [javascript]
+  - puedo escribir algo de JavaScript [javascript]
   - mmm... [hmm]
 
 hmm:
