--- a/src/data/levels/05a_CPU/11_Instructions (5-5) - System/chat/en.yml
+++ b/src/data/levels/05a_CPU/11_Instructions (5-5) - System/chat/en.yml
@@ -18,7 +18,7 @@ interrupt:
   - after handling the event, the execution usually returns to where it was left off
   - "in the NEEES, there are 3 events:"
   - "🔁  <RESET>: Triggered when the system is turned on"
-  - "📹  <NMI>: Triggered when the PPU finishes drawing a frame"
+  - "📹  NMI: Triggered when the PPU finishes drawing a frame"
   - "✋  <IRQ>: Triggered by a `BRK` instruction, the APU, or external hardware like mappers"
   responses:
   - can you give me an example? 🤔 [example]
@@ -29,17 +29,17 @@ example:
   - you need to move your sprites when the PPU finishes rendering its current frame, to avoid doing it while it's drawing (causing glitches 💥 )
   - so, you put your sprite moving code in -for example- address $90CC
   - that will be the location of your <interrupt handler>
-  - and then you "subscribe" to the <NMI> event by placing a pointer to $90CC in <NMI>'s vector (which is ~$FFFA/B~)
+  - and then you "subscribe" to the NMI event by placing a pointer to $90CC in NMI's vector (which is ~$FFFA/B~)
   - (in Little Endian, so $FFFA holds $CC and $FFFB holds $90)
   responses:
-  - what would happen when an <NMI> occurs? [nmi]
+  - what would happen when an NMI occurs? [nmi]
 
 nmi:
   messages:
-  - "in this example, when the <NMI> is triggered, the CPU will:"
+  - "in this example, when the NMI is triggered, the CPU will:"
   - 🧱  push [PC] and the flags onto the stack
   - 🏁  set ~I=1~, which disables user interrupts
-  - 🐏  grab the value $90CC by reading $FFFA and $FFFB (<NMI>'s vector)
+  - 🐏  grab the value $90CC by reading $FFFA and $FFFB (NMI's vector)
   - 🦘  jump to $90CC
   - 🚲  consume 7 cycles while doing all this
   - then, the interrupt handler will move the sprites and run `RTI` ("Return from Interrupt") to restore the previous state
@@ -65,7 +65,7 @@ iflag:
   - |-
     the thing is... only <IRQ> events can be disabled
     <RESET> can't be ignored for obvious reasons
-    <NMI> stands for "Non-maskable interrupt" and it's very important, so it can't be masked (aka "disabled")
+    NMI stands for "Non-maskable interrupt" and it's very important, so it can't be masked (aka "disabled")
   responses:
   - ...nmi
 
