--- a/src/data/levels/05a_CPU/11_Instructions (5-5) - System/chat/es.yml
+++ b/src/data/levels/05a_CPU/11_Instructions (5-5) - System/chat/es.yml
@@ -18,7 +18,7 @@ interrupt:
   - luego de manejar el evento, la ejecución suele continuar desde donde se interrumpió
   - "en la NEEES, hay 3 eventos:"
   - "🔁  <RESET>: Disparado cuando el sistema se enciende"
-  - "📹  <NMI>: Disparado cuando la PPU termina de dibujar un frame"
+  - "📹  NMI: Disparado cuando la PPU termina de dibujar un frame"
   - "✋  <IRQ>: Disparado por una instrucción `BRK`, la APU, o hardware externo como mappers"
   responses:
   - ¿puedes darme un ejemplo? 🤔 [example]
@@ -29,17 +29,17 @@ example:
   - necesitas mover tus sprites cuando la PPU termina de renderizar su frame actual, para evitar hacerlo mientras está dibujando (causando glitches 💥 )
   - así que, pones tu código que mueve sprites en -por ejemplo- la dirección $90CC
   - esa será la ubicación de tu <manejador de interrupciones>
-  - y luego te "suscribes" al evento <NMI> poniendo un puntero a $90CC en el vector de <NMI> (que es ~$FFFA/B~)
+  - y luego te "suscribes" al evento NMI poniendo un puntero a $90CC en el vector de NMI (que es ~$FFFA/B~)
   - (en Little Endian, por lo que $FFFA guarda $CC y $FFFB guarda $90)
   responses:
-  - ¿qué pasaría cuando un <NMI> ocurre? [nmi]
+  - ¿qué pasaría cuando un NMI ocurre? [nmi]
 
 nmi:
   messages:
-  - "en este ejemplo, cuando un <NMI> es disparado, la CPU:"
+  - "en este ejemplo, cuando un NMI es disparado, la CPU:"
   - 🧱  pone [PC] y las banderas en la pila
   - 🏁  asigna ~I=1~, que desactiva las interrupciones del usuario
-  - 🐏  toma el valor $90CC de leer $FFFA y $FFFB (el vector de <NMI>)
+  - 🐏  toma el valor $90CC de leer $FFFA y $FFFB (el vector de NMI)
   - 🦘  salta a $90CC
   - 🚲  consume 7 ciclos haciendo todo esto
   - luego, el manejador de interrupciones moverá los sprites y ejecutará `RTI` ("Return from Interrupt") para restaurar el estado anterior
@@ -65,7 +65,7 @@ iflag:
   - |-
     la cosa es que... solo los eventos <IRQ> se pueden desactivar
     <RESET> no puede ser ignorada por obvias razones
-    <NMI> quiere decir "Non-maskable interrupt" y es muy importante, por lo que no puede ser "masked" (o sea, desactivada)
+    NMI quiere decir "Non-maskable interrupt" y es muy importante, por lo que no puede ser "masked" (o sea, desactivada)
   responses:
   - ...nmi
 
