--- a/src/data/levels/05b_PPU/13_Sprites 1-6 - OAM/chat/en.yml
+++ b/src/data/levels/05b_PPU/13_Sprites 1-6 - OAM/chat/en.yml
@@ -33,7 +33,7 @@ implement:
       (remember to add 1 to the Y coordinate!)
   responses:
   - why should I add 1 to the Y coordinate? ➕ [addone]
-  - how do I know if the sprite is 8x8 or 8x16? 📏 [spritesize]
+  - how do I know if the sprite is ~8x8~ or ~8x16~? 📏 [spritesize]
   - how do I know the tile id / pattern table id? 🕊️ 📖 [patterntable]
 
 addone:
@@ -48,13 +48,13 @@ addone:
 spritesize:
   messages:
   - that's a global setting, configured in 🎛️  ~PPUCtrl~
-  - sprites should use the 8x16 mode when `ppu.registers.ppuCtrl.spriteSize === 1`
+  - sprites should use the ~8x16~ mode when `ppu.registers.ppuCtrl.spriteSize === 1`
   responses:
   - ...implement
 
 patterntable:
   messages:
-  - in 8x8 mode, the ~tile id~ is `byte1` of the OAM entry, and the ~pattern table id~ is `ppu.registers.ppuCtrl.sprite8x8PatternTableId`
-  - in 8x16 mode, the ~tile id~ is `(byte1 & 0b11111110)` and the ~pattern table id~ is `(byte1 & 0b00000001)`
+  - in ~8x8~ mode, the ~tile id~ is `byte1` of the OAM entry, and the ~pattern table id~ is `ppu.registers.ppuCtrl.sprite8x8PatternTableId`
+  - in ~8x16~ mode, the ~tile id~ is `(byte1 & 0b11111110)` and the ~pattern table id~ is `(byte1 & 0b00000001)`
   responses:
   - ...implement
