--- a/src/data/levels/05b_PPU/13_Sprites 1-6 - OAM/chat/es.yml
+++ b/src/data/levels/05b_PPU/13_Sprites 1-6 - OAM/chat/es.yml
@@ -33,7 +33,7 @@ implement:
       (¡recuerda agregar 1 a la coordenada Y!)
   responses:
   - ¿por qué debería agregar 1 a la coordenada Y? ➕ [addone]
-  - ¿cómo sé si el sprite es 8x8 o 8x16? 📏 [spritesize]
+  - ¿cómo sé si el sprite es ~8x8~ o ~8x16~? 📏 [spritesize]
   - ¿cómo sé el id de tile o de la pattern table? 🕊️ 📖 [patterntable]
 
 addone:
@@ -48,13 +48,13 @@ addone:
 spritesize:
   messages:
   - eso es una configuración global, configurada en 🎛️  ~PPUCtrl~
-  - los sprites deben usar el modo 8x16 cuando `ppu.registers.ppuCtrl.spriteSize === 1`
+  - los sprites deben usar el modo ~8x16~ cuando `ppu.registers.ppuCtrl.spriteSize === 1`
   responses:
   - ...implement
 
 patterntable:
   messages:
-  - en modo 8x8, el ~id de tile~ es el `byte1` de la entrada OAM, y el ~id de pattern table~ es `ppu.registers.ppuCtrl.sprite8x8PatternTableId`
-  - en modo 8x16, the ~id de tile~ es `(byte1 & 0b11111110)` y el ~id de pattern table~ es `(byte1 & 0b00000001)`
+  - en modo ~8x8~, el ~id de tile~ es el `byte1` de la entrada OAM, y el ~id de pattern table~ es `ppu.registers.ppuCtrl.sprite8x8PatternTableId`
+  - en modo ~8x16~, the ~id de tile~ es `(byte1 & 0b11111110)` y el ~id de pattern table~ es `(byte1 & 0b00000001)`
   responses:
   - ...implement
