--- a/src/data/levels/05b_PPU/16_Sprites 4-6 - Flipping/chat/es.yml
+++ b/src/data/levels/05b_PPU/16_Sprites 4-6 - Flipping/chat/es.yml
@@ -40,7 +40,9 @@ horizontal:
 vertical:
   messages:
   - el volteo vertical es similar, pero tiene una pequeña peculiaridad
-  - para tener en cuenta los sprites de 8x16, debemos usar la coordenada Y <dentro del tile actual>
+  - para tener en cuenta los sprites de ~8x16~, debemos usar la coordenada Y <dentro del tile actual>
   - primero define `tileInsideY = insideY % 8;`
-  - "luego, como último argumento del constructor de `Tile`, usa `sprite.flipY ? 7 - tileInsideY : tileInsideY`"
+  - |-
+    luego, como último argumento del constructor de `Tile`, usa:
+      `sprite.flipY ? 7 - tileInsideY : tileInsideY`
   responses: []
