--- a/src/data/levels/03_Cartridge/05_Locating the program/chat/en.yml
+++ b/src/data/levels/03_Cartridge/05_Locating the program/chat/en.yml
@@ -13,7 +13,7 @@ cut:
   - all arrays have a `slice(start, end)` method 🍕
   - it extracts a subarray from `start` to `end-1`
   - "i.e. ```javascript [\"a\", \"b\", \"c\", \"d\"].slice(1, 3)``` returns ```javascript [\"b\", \"c\"]```"
-  - (it doesn't include the element at index 3, "d")
+  - (it doesn't include the element at index 3, ```javascript "d"```)
   responses:
   - it doesn't work [morehelp]
 
