--- a/src/data/levels/03_Cartridge/05_Locating the program/chat/es.yml
+++ b/src/data/levels/03_Cartridge/05_Locating the program/chat/es.yml
@@ -13,7 +13,7 @@ cut:
   - todos los arrays tienen un método `slice(start, end)` 🍕
   - extrae un sub-array de `start` a `end-1`
   - "p. ej. ```javascript [\"a\", \"b\", \"c\", \"d\"].slice(1, 3)``` retorna ```javascript [\"b\", \"c\"]```"
-  - (no incluye el elemento del índice 3, "d")
+  - (no incluye el elemento del índice 3, ```javascript "d"```)
   responses:
   - no funciona [morehelp]
 
