--- a/src/data/levels/04_Memory/01_CPU Memory/chat/en.yml
+++ b/src/data/levels/04_Memory/01_CPU Memory/chat/en.yml
@@ -49,9 +49,9 @@ implement:
 help:
   messages:
   - I handled that for you, as that part can be a bit tricky
-  - basically, calling `read(0x0802)` should return the same as `read(0x0002)`
-  - and calling `write(0x0802, value)` should have the same effect as calling `write(0x0002, value)`
-  - that's why the range $0800-$1FFF is called 🚽  <a mirror> of $0000-$07FF
+  - basically, calling ```javascript read(0x0802)``` should return the same as ```javascript read(0x0002)```
+  - and calling ```javascript write(0x0802, value)``` should have the same effect as calling ```javascript write(0x0002, value)```
+  - that's why the range $0800-$1FFF is called a 🚽  mirror of $0000-$07FF
   - "here's an example with the other mirror range in $2008:"
   - <{memory_mirror.png}>
   responses: []
