--- a/src/data/levels/05a_CPU/04_Helpers/chat/es.yml
+++ b/src/data/levels/05a_CPU/04_Helpers/chat/es.yml
@@ -5,15 +5,15 @@ main:
   - |-
     📚  en tus clases `Register8Bit` y `Register16Bit`, implementa:
     **increment()**:
-      **->** llama a `setValue(...)` con el resultado de `getValue() + 1`
+      **->** llama a `setValue(...)` con el resultado de ```javascript getValue()+1```
     **decrement()**:
-      **->** llama a `setValue(...)` con el resultado de `getValue() - 1`
+      **->** llama a `setValue(...)` con el resultado de ```javascript getValue()-1```
   - |-
     📚  en tu `FlagsRegister`, implementa:
     **updateZero(value)**:
-      **->** asigna `z=true` si `value` es 0, o `z=false` en caso contrario
+      **->** asigna ```javascript z=true``` si `value` es 0, o ```javascript z=false``` en caso contrario
     **updateNegative(value)**:
-      **->** asigna `n=true` si `byte.isNegative(value)`, o `n=false` en caso contrario
+      **->** asigna ```javascript n=true``` si ```javascript byte.isNegative(value)```, o ```javascript n=false``` en caso contrario
     **updateZeroAndNegative(value)**:
       **->** llama a `updateZero(...)` y `updateNegative(...)` con `value`
   responses: []
